# near_social_multiplatform

./: .gitignore  README.md  firebase.json  firestore.rules  package-lock.json  package.json  pubspec.yaml
.firebase/: hosting.YnVpbGQvd2Vi.cache
android/: local.properties
assets/cryptogrpahy_gateway/: index.html  main.js  manifest.json  package-lock.json  package.json  push-notification-service-worker.js  vite.config.js
cryptography_project/: Cargo.toml
cryptography_project/src/: lib.rs
deploy/: init_deploy_script.sh  stop_containers.sh
functions/: index.js  package-lock.json  package.json
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
lib/: main.dart
lib/config/: constants.dart  setup.dart
lib/exceptions/: exceptions.dart
lib/formatters/: qr_formatter.dart
lib/modules/: app_module.dart  core_module.dart
lib/modules/home/: home_module.dart
lib/routes/: routes.dart
lib/services/: crypto_service.dart  local_auth_service.dart  local_notification_service.dart  testnet_service.dart
lib/shared_widgets/: home_menu_card.dart  storage_controll_dialogs.dart
local_gateway/: index.js  logic.txt  package-lock.json  package.json
real-time-calls-server/: index.js  package-lock.json  package.json
supabase/: config.toml
supabase/db_setup/: migration_db_query.sql  test_queries.sql
test/: widget_test.dart
to_ai_embedding/: main.py
web/: index.html  manifest.json  push-notification-service-worker.js
web-push-notification-service/: index.js  package-lock.json  package.json
(+80 files in other folders)
